--- a/src/pages/CountryDetails/CountryDetails.scss
+++ b/src/pages/CountryDetails/CountryDetails.scss
@@ -2,6 +2,17 @@ span {
   font-weight: bold;
 }
 
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 400px;
+  margin: auto;
+  background-color: #1976d2;
+  color: aliceblue;
+  border-radius: 20px;
+}
+
 .card {
   width: fit-content;
   padding: 1rem;
