--- a/src/components/DataGrid/DataGrid.scss
+++ b/src/components/DataGrid/DataGrid.scss
@@ -1,4 +1,7 @@
 .table-row:hover {
-  background-color: #f5f5f5;
+  background-color: #333;
   cursor: pointer;
+}
+.table-row:hover .MuiTableCell-root {
+  color: #fff;
 }
