--- a/src/pages/CountryDetails/CountryDetails.scss
+++ b/src/pages/CountryDetails/CountryDetails.scss
@@ -6,11 +6,12 @@ span {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 400px;
+  max-width: 600px;
   margin: auto;
-  background-color: #1976d2;
+  background-color: #333;
   color: aliceblue;
   border-radius: 20px;
+  padding: 1rem;
 }
 
 .card {
