--- a/src/pages/CountryDetails/CountryDetails.scss
+++ b/src/pages/CountryDetails/CountryDetails.scss
@@ -23,8 +23,16 @@ span {
   justify-content: center;
 }
 
-.back-button {
+.back_btn {
+  transform: rotate(180deg);
+  width: 60px;
+  height: auto;
   position: absolute;
-  left: 0;
-  top: 0;
+  top: 15px;
+  left: 25px;
+  cursor:pointer;
+}
+.back_btn:hover{
+  transition: all 0.8s ease;
+  margin-left: 15px;
 }
